##Text encoding: utf-8

2008-11-18  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/atom.cc: don't crash or end in an infinite loop when adding
	a fourth bond to phophorus. [#24863]

2008-11-17  Jean Bréfort  <jean.brefort@normalesup.org>
	* plugins/paint/bonds/bondtool.cc: fix undo when adding a bond between two
	molecules.

2008-11-16  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/Makefile.am: added new files.
	* libs/gccv/arrow.cc: initial work on arrows.
	* libs/gccv/arrow.h: ditto.
	* libs/gccv/canvas.cc: fixed path in copyright.
	* libs/gccv/canvas.h: ditto.
	* libs/gccv/circle.cc: new item.
	* libs/gccv/circle.h:ditto.
	* libs/gccv/client.cc: fixed path in copyright.
	* libs/gccv/client.h: ditto.
	* libs/gccv/fill-item.cc: ditto.
	* libs/gccv/fill-item.h: ditto.
	* libs/gccv/group.cc: ditto.
	* libs/gccv/group.h: ditto.
	* libs/gccv/hash.cc: ditto.
	* libs/gccv/hash.h: ditto.
	* libs/gccv/item-client.cc: ditto.
	* libs/gccv/item-client.h: ditto.
	* libs/gccv/item.cc: ditto.
	* libs/gccv/item.h: ditto.
	* libs/gccv/line-item.cc: ditto.
	* libs/gccv/line-item.h: ditto.
	* libs/gccv/line.cc: ditto.
	* libs/gccv/line.h: ditto.
	* libs/gccv/rectangle.cc: ditto.
	* libs/gccv/rectangle.h: ditto.
	* libs/gccv/squiggle.cc: ditto.
	* libs/gccv/squiggle.h: ditto.
	* libs/gccv/structs.h: ditto.
	* libs/gccv/text.cc: ditto.
	* libs/gccv/text.h: ditto.
	* libs/gccv/wedge.cc: ditto.
	* libs/gccv/wedge.h: ditto.
	* libs/gcp/bond.cc: fixed second line position for some double bonds.
	* libs/gcp/document.cc: don't update items when there is no canvas.
	* libs/gcp/theme.cc: call g_type_init.
	* libs/gcu/object.h: fixed documentation.
	* libs/gcu/residue.cc: don't free lang before using it.
	* plugins/paint/residues/pseudo-atom.cc: reimplemented drawing.
	* plugins/paint/selection/selectiontool.cc: display an error message box
	instead crashing when a group creation failed.

2008-11-15  Jean Bréfort  <jean.brefort@normalesup.org>